create first backing index